unpackaged/objects/copado__Burndown_Item__c.object
<CustomObject>
	<fields>
		<fullName>copado__Actual_Velocity__c</fullName>
		<inlineHelpText>Sprint Actual Velocity on a particular date on which Sprint Snapshot Batch is executed</inlineHelpText>
		<label>Actual Velocity</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__Date__c</fullName>
		<label>Date</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>copado__Expected_Story_Point__c</fullName>
		<label>Expected Story Point</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__Planned_Velocity__c</fullName>
		<description>Sprint Planned Velocity on a particular date on which Sprint Snapshot Batch is executed.</description>
		<label>Planned Velocity</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__Snapshot_Date__c</fullName>
		<label>Snapshot Date</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>copado__Sprint__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Sprint</label>
		<referenceTo>copado__Sprint__c</referenceTo>
		<relationshipName>Burndown_Items</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Total_Story_Point__c</fullName>
		<label>Total Story Point</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<label>Sprint Snapshot</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Sprint__c</columns>
		<columns>copado__Date__c</columns>
		<columns>copado__Expected_Story_Point__c</columns>
		<columns>copado__Total_Story_Point__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
		<language>en_US</language>
	</listViews>
	<nameField>
		<displayFormat>BI - {0000000}</displayFormat>
		<label>Burndown Item  Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Sprint Snapshot</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>